# AgentRuntime

./: .dockerignore  .gitignore  BENCHMARK.md  Makefile  README.md  progress_2026-07-22.txt  pyproject.toml  remaining_todos_2026-07-24.txt  requirements.txt
applications/: __init__.py
applications/incident_repair/: __init__.py  config.py  graph.py  routing.py  runner.py  schemas.py  state.py
applications/incident_repair/direct/: __init__.py  codex.py  deepseek.py  process_monitor.py  tool.py  workspace.py
applications/incident_repair/execution/: __init__.py  base.py  direct.py  factory.py  instrumentation.py  resource_sampler.py  runtime.py
applications/incident_repair/nodes/: __init__.py  coder.py  common.py  integrate.py  integrate_coder.py  (+6 more)
aruntime/api/: client.py
aruntime/backends/: __init__.py  base.py  codex_cli.py  direct_tool.py  legacy_llm.py  native_planner.py  registry.py
aruntime/cli/: main.py
aruntime/comm/: message.py  router.py  transport.py
aruntime/context/: __init__.py  manager.py  types.py
aruntime/core/: acb.py  lifecycle.py  models.py
aruntime/daemon/: app.py  fault_service.py  main.py  recovery_service.py  store.py  worker_service.py
aruntime/dashboard/: app.js  benchmarks.html  compare.html  demo.html  index.html  styles.css
aruntime/executor/: __init__.py  task_executor.py  workspace.py
aruntime/llm/: gateway.py
aruntime/observability/: __init__.py  trace.py
aruntime/planner/: __init__.py  materializer.py  models.py  parser.py  prompt_builder.py  validator.py
aruntime/resource/: __init__.py  cgroup.py  monitor.py  types.py
aruntime/scheduler/: base.py  dag.py  fifo.py  kernel.py  resource_aware.py
aruntime/tools/: __init__.py  base.py  file_tools.py  git_tools.py  pytest_tool.py  registry.py  repo_scan_tool.py  shell_tool.py
aruntime/worker/: agent_worker.py
aruntime/workflow/: __init__.py  recovery.py  service.py  summary.py
aruntime/workspace/: __init__.py  artifact_store.py  integration.py  manager.py  models.py
configs/: runtime.json.template
configs/schemas/: codex_coder_result.schema.json  codex_reviewer_result.schema.json  planner_inspection.schema.json  planner_plan.schema.json
deploy/: Dockerfile.openeuler  docker-compose.demo.yml  entrypoint.sh
docs/: agent_abstraction.md  agent_lifecycle.md  architecture.md  benchmark.md  context.md  demo_runbook.md  dynamic_task.md  experiment.md  experiment_protocol.md  fault_tolerance.md  implementation_status.md  langgraph_compare.md  limitations.md  openEuler_deployment.md  progress.md  scheduler.md
docs/history/: progress_2026-07-22.md
examples/code_repair/: workflow.yaml
examples/production_incident_demo/: README.md  agents.yaml  root_task.json
scripts/: benchmark_docker_openeuler.sh  docker_common.sh  e2e_runtime_guard.py  final_acceptance.py  final_board_check.py  final_check.sh  preflight_openeuler.py  prepare_e2e_repo.py  run_real_direct.py  run_real_runtime.py  run_real_runtime_fault.py  start_agentd.sh  start_agentd_docker.sh  submit.sh  test_docker_openeuler.sh  test_integration.sh  test_real_demo_docker_openeuler.sh  test_smoke_openeuler.sh  test_unit.sh
testing/fixtures/: fake_codex.py
testing/integration/: test_daemon_restart.py  test_demo.py  test_incident_sequential_coders.py  test_worker_backend_selection.py  test_worker_fallback.py
testing/perf/: __init__.py  metrics.py  suite.py  test_benchmark.py  workloads.py
testing/smoke/: test_smoke.py
testing/unittest/: conftest.py
(+136 files in other folders)
