[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-os"
version = "0.1.19"
description = "面向多智能体的操作系统级执行时（Agent Runtime），支持 AgentCapability、动态任务、ACB/LOST 状态机、统一资源管理、可靠通信、受控工具执行与 benchmark"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.scripts]
agentd = "aruntime.daemon.main:main"
agentctl = "aruntime.cli.main:app"

[tool.setuptools.packages.find]
include = ["aruntime*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
