[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime-os"
version = "0.1.52"
description = "面向多智能体的操作系统级执行时（Agent Runtime），支持 AgentCapability、异构 Backend 选择验证、Codex 结构化结果校验、openEuler 强制 Codex 镜像、LangGraph 双执行模式、Planner 动态 DAG、Attempt 级 worktree/artifact、Run Dashboard、统一资源管理、可靠通信、受控工具执行、fallback、Demo pytest 门禁与 benchmark"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "langgraph>=1.0,<2.0",
    "langgraph-checkpoint-sqlite>=3.0,<4.0",
]

[project.scripts]
agentd = "aruntime.daemon.main:main"
agentctl = "aruntime.cli.main:app"

[tool.setuptools.packages.find]
include = ["aruntime*", "applications*"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
